round-2/search-embed.css
/* ... */
.input-recalls {
	clear: both !important;
	height: 40px  !important;
	padding: 0px 0px 0px 12px !important;
	font-size: 18px !important;
	line-height: 1.4375;
	color: #888;
	background-color: #fff;
	background-image: none;
	border: 1px solid #335075;
	border-radius: 4px !important;
	box-shadow: inset 0 1px 1px rgba(0,0,0,.075) !important;
	margin-left: auto !important;
	width:100% !important;
	padding-top: 7px !important;
	padding-bottom: 4px !important;
	display: flex !important;
	float: left !important;
}

.recall-categories {
	clear: both;
	padding-top: 5px;
}

.recall-categories .toc {
	display:flex;
	white-space: nowrap;
}

.recall-categories li {
	font-size:14px;
	margin-left:0px;
	padding: 2px 2px 0px 2px;
}

.btn-clear {
	background: #3498db;
  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
  background-image: -o-linear-gradient(top, #3498db, #2980b9);
  background-image: linear-gradient(to bottom, #3498db, #2980b9);
  -webkit-border-radius: 8;
  -moz-border-radius: 8;
  border-radius: 8px;
  font-family: 'Lato';
  color: #3f4a64;
  font-size: 16px;
  background: #f2f3f5;
  padding: 2px 6px 2px 6px;
  border: solid #dedde2 1px;
  text-decoration: none;
	float:right;
	margin-top: 16px;
  color: #333 !important;
}

.recall-date {
	float:right;
	margin-top:0px;
	font-size: 16px;
}
.recall-summary {
	display:block;
	clear:both;
	padding-bottom: 10px;
	border-bottom: 1px solid #e1e1e1;
}

.recall-summary {
	font-size: 16px;
}


.recall-title {
	font-size: 20px !important;
	float: left;
	margin-top: 0px;
  margin-bottom: 0px;
	width: calc(100% - 100px);
	height: auto;
  text-decoration: underline;
  color: #284162;
}

dl.inline-flex {
  display: flex;
  flex-flow: row;
  flex-wrap: wrap;
  overflow: visible;
	margin-bottom: 0px !important;
}
dl.inline-flex dt {
  flex: 0 0 15%;
  text-overflow: ellipsis;
  overflow: hidden;
}
dl.inline-flex dd {
  flex: 0 0 85%;
  margin-left: auto;
  text-align: left;
  text-overflow: ellipsis;
  overflow: hidden;
	margin-bottom: 0px !important;

}


.panel-body {
	padding-top: 5px !important;
	padding-bottom: 0px !important;
}

.accordion .panel-heading { padding: 0;}
.accordion .panel-title > a {
	display: block;
	padding: 0.4em 0.6em;
    outline: none;
    font-weight:bold;
    text-decoration: none;
		color: #333;
}

.accordion .panel-title > a.accordion-toggle::before, .accordion a[data-toggle="collapse"]::before  {
    content:"\e113";
    float: left;
    font-family: 'Glyphicons Halflings';
    margin-right:.6em;
}
.accordion .panel-title > a.accordion-toggle.collapsed::before, .accordion a.collapsed[data-toggle="collapse"]::before  {
    content:"\e114";
}

#recall-types-filter a {
    margin-left:2px;
    text-decoration:none;
    color:black"
}

.recalls-filter-1 {
	display: inline-block;
	margin-top: 5px;
	background-color: #495f07;
	border-radius:0.25em;

}

.recalls-filter-2 {
	display: inline-block;
	margin-top: 5px;
	border-radius:0.25em;
	background-color: #3a6263;

}

.recalls-filter-3 {
	display: inline-block;
	margin-top: 5px;
	border-radius:0.25em;
	background-color: #843028;
	/*var-2*/
	/* background-color: #495f0775;*/
	/* border-bottom: 4px #843028 solid;*/
}

.recalls-filter-4 {
	display: inline-block;
	margin-top: 5px;
	border-radius:0.25em;
	background-color: #6e3a74;
	/*var-2*/
	/* background-color: #495f0775; */
	/* border-bottom: 4px #6e3a74 solid; */
}



#recall-types-filter li a > span {
    font-size:16px;
    padding:10px;
    color:black;
}

.recalls-filter-1-var-2 {

  text-align: center;	display: inline-block;
	margin-top: 5px;
	border-radius:0.15em;
  background-color: white;
	border: 2px solid #8db12175;
  min-width: 165px;
}

.active.recalls-filter-1-var-2 {
	background-color: #8db12175;
	border-bottom: 4px #495f07 solid;
}

.recalls-filter-2-var-2 {
  text-align: center;
	display: inline-block;
	margin-top: 5px;
	border-radius:0.15em;
  background-color: white;
	border: 2px solid  #76a9ab66;
  min-width: 96px;

}

.active.recalls-filter-2-var-2 {
	background-color: #76a9ab66;
	border-bottom: 4px #3a6263 solid;
}

.recalls-filter-3-var-2 {
  text-align: center;
	display: inline-block;
	margin-top: 5px;
	border-radius:0.15em;
  background-color: white;
	border: 2px solid #ec796e6e;
  min-width: 96px;

}

.active.recalls-filter-3-var-2 {
	background-color: #ec796e6e;
	border-bottom: 4px #843028 solid;
}

.recalls-filter-4-var-2 {
  text-align: center;
	display: inline-block;
	margin-top: 5px;
	border-radius:0.15em;
  background-color: white;
	border: 2px solid #eb88f775;
  min-width: 180px;
}

.active.recalls-filter-4-var-2 {
	background-color: #eb88f775;
	border-bottom: 4px #6e3a74 solid;
}

.contributors {
 font-size: 16px !important;
 font-weight: 600;
}

.from {
 font-size: 17px !important;
 margin-top: 7px;
}

.contributors ul {
 margin-block-start: 0em;
 margin-block-end: 0em;
 margin-inline-start: -25px;
 margin-inline-end: 0px;
 padding-inline-start: 0px;

}

@media screen and (min-width: 992px) {
.contributors li {
    float: left;
    margin-right: .7em;
}
}

@media screen and (min-width: 992px) {
.contributors li:first-child:before {
    content: none;
}
.contributors li:before {
    content: "\2022";
    margin-right: .7em;
}
}

@media screen and (max-width: 767px) {

.contributors ul {
	margin-inline-start: 0px !important;
}

}


h1 span.stacked {
		                display: flex;
		                flex-direction: column-reverse;
		                margin-left: -9999px;
		}
		h1 span.stacked span:nth-child(1), h1 span.stacked span:nth-child(2) {
		                margin-left: 9999px;
		}
		h1 span.stacked span:nth-child(2) {
		                font-size: 0.8em;
		                color: #666;
										font-weight: 200;
										margin-bottom: 0.175em;
		}
		h1 span.stacked span:nth-child(1) {
		                margin-top: -1.1em;
		}
/* ... */

